--- a/.gitignore
+++ b/.gitignore
@@ -102,3 +102,14 @@ venv.bak/
 
 # mypy
 .mypy_cache/
+
+#vscode
+dicetools.code-workspace
+.vscode/
+test-data/
+
+#yapf
+.style.yapf
+
+#git
+.gitattributes
